--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "metalman-action",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "An action middleware for the metalman module.",
-  "keywords": ["metalman", "middleware", "action", "execute"],
+  "keywords": [
+    "metalman",
+    "middleware",
+    "action",
+    "execute"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "standard && node test.js"
